# learning-haskell-notes

./: .gitignore  book_updates.org  feedback.org  questions.org
01-LambdaCalculus/: chapter_notes.org  exercises.org
02-HelloHaskell/: chapter_notes.org  exercises.org  learn.hs  test.hs
03-Strings/: chapter_notes.org  ex4.hs  ex5.hs  ex6.hs  exercises.org  print3.hs  print3flipped.hs
04-BasicDatatypes/: chapter_notes.org  exercises.org  greetIfCool1.hs
05-Types/: chapter_notes.org  exercises.org  typeInference1.hs
06-Typeclasses/: chapter_notes.org  days.hs  exercises.org  fixed-typecheck-02.hs  pair.hs  sentence.hs  tisAn.hs  tupleEq.hs  what_can_we_do.hs
07-MoreFunctionalPatters/: .#arith4.hs  arith4.hs  case_practice.hs  chapter_notes.org  exercises.org  registeredUser.hs
08-Recursion/: chapter_notes.org  exercises.org  summation.hs  wordnumber.hs
09-Lists/: chapter_notes.org  enum_from_to.hs  exercises.org  listify.hs  listify_newlines.hs  zipping.hs
10-FoldingLists/: chapter_notes.org  database_processing.hs  exercises.org
11-AlgebraicDatatypes/: authors.hs  bin_tree.hs  capitalizeParagraph.hs  chapter_notes.org  ciphers.hs  ciphers2.hs  exercises.org  for_example.hs  hutton.hs  logic_goats.hs  phone.hs  programmer.hs  too_many_goats.hs  vehicles.hs
12-SignalingAdversity/: chapter_notes.org  exercises.org  naturals.hs
13-BuildingProjects/: chapter_notes.org
13-BuildingProjects/14-Testing/: chapter_notes.org
13-BuildingProjects/hangman/: hangman.cabal
13-BuildingProjects/hangman/src/: Main.hs
14-Testing/: chapter_notes.org  exercises.org  wordNumberTest.hs
14-Testing/Morse/: LICENSE  morse.cabal
14-Testing/Morse/src/: Main.hs  Morse.hs
14-Testing/Morse/test/: test.hs
14-Testing/TestingPackage/: Addition.hs  QuickChecking.hs  TestingPackage.cabal
15-MonoidSemigroup/: bullMappend.hs  chapter_notes.org  exercises.org  semigroup_instances.hs
16-Functor/: chapter_notes.org  exercises.org  functorImplementations.hs  instancesOfFunc.hs  naturalTransformations.hs
17-Applicative/: chapter_notes.org  exercises.org
18-Monad/: chapter_notes.org  exercises.org
19-ApplyingStructure/: chapter-notes.org
20-Foldable/: chapter-notes.org  exercises.org
21-Traversable/: chapter-notes.org
22-Reader/: chapter_notes.org  exercises.org
23-State/: chapter-notes.org
24-ParserCombinators/: chapter_notes.org  exercises.org
25-Composing-Types/: chapter_notes.org  exercises.org
26-Monad-Transformers/: chapter-notes.org  exercises.org
27-Non-Strictness/: chapter-notes.org  exercises.org
31-FinalProject/: chapter-notes.org
Extra-Notes/: haskell-stack.org
Sandbox/: LICENSE  README.md  Sandbox.cabal
Sandbox/src/: applicativeCheck.hs  throwDown.hs  throwDown2.hs  zipListMonoid.hs
Sandbox/src/chpt-18-notes/: badMonad.hs  fixedMonad.hs
Sandbox/src/chpt-24-notes/: backtracking.hs  iniParser.hs  learnParsers.hs  marshall.hs  parseFraction.hs  polymorphicParse.hs
Sandbox/src/chpt-27-notes/: coreDump.hs
Sandbox/src/exercises/: 17-chapter-exercises.hs  17-list-applicative.hs  18-chapter-exercises.hs  21-chapter-exercises.hs  22-readerPractice.hs  23-write-your-own-state-monad.hs  24-fractionDecimal.hs  24-logParser.hs  24-semVer.hs  26-eithert.hs  26-statet.hs
