name:                hangman
version:             0.1.0.0
synopsis:            Playing Hangman
description:         Please see README.md
homepage:            https://github.com/swans-one/learning-haskell-notes
license:             BSD3
license-file:        LICENSE
author:              Erik Swanson
maintainer:          theerikswanson@gmail.com
copyright:           2016 Erik Swanson
category:            Game
build-type:          Simple
extra-source-files:  data/dict.txt
cabal-version:       >=1.10

executable hangman
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , random
                     , split
