name:                morse
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/swans-one/learning-haskell
license:             BSD3
license-file:        LICENSE
author:              Erik Swanson
maintainer:          theerikswanson@gmail.com
copyright:           2016 Erik Swanson
category:            Text
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Morse
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , QuickCheck
  default-language:    Haskell2010

executable Morse-exe
  hs-source-dirs:      src
  main-is:             Main.hs
  build-depends:       base
                     , containers
                     , morse
                     , QuickCheck
  default-language:    Haskell2010

test-suite Morse-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             test.hs
  build-depends:       base
                     , containers
                     , morse
                     , QuickCheck
  default-language:    Haskell2010
